# CoTest

./: README.md  SPEC.md  pyproject.toml
docs/: operations.md
ops/: trading.toml
stock_predictor/: __init__.py  backtest.py  broker.py  cli.py  data.py  model.py  portfolio.py  universe.py
tests/: test_backtest.py  test_cli.py  test_data.py  test_model.py  test_portfolio_optimization.py  test_spec.py  test_universe.py
